# Perception_FruitClassification

./: Apples.txt  Banana.txt  CMakeLists.txt  Orange.txt  Perception.mlx  Perception_Miniprojekt.cpp
